# MaskDINO

./: herdnet_paper.md  main.py  paper.md  pyproject.toml
configs/herdnet/: herdnet_swin_tiny_bs16_50ep.yaml
maskdino/data/datasets/: __init__.py  register_herdnet.py
maskdino/modeling/pixel_decoder/ops/: make.sh
