[project]
name = "maskdino"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "detectron2",
    "opencv-python>=4.12.0.88",
    "scipy>=1.16.2",
    "shapely>=2.1.2",
    "timm>=1.0.20",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
]

[tool.uv.sources]
detectron2 = { git = "https://github.com/facebookresearch/detectron2" }
